# chess

./: .gitignore  .gitmodules  CMakeLists.txt
cmake/: Sanitizers.cmake  Warnings.cmake
docs/: README.rst  TODO.rst
docs/uci/: uci-protocol.rst
docs/uci-interface/: spec.rst
docs/uci-protocol/: uci-spec.html  uci-spec.rst
src/: CMakeLists.txt
src/uci-interface/: CMakeLists.txt
src/uci-interface/include/uci/: config.hpp  engine_interface.hpp  globals.hpp  info.hpp  limits.hpp  option.hpp  uci.hpp
src/uci-interface/tests/: CMakeLists.txt  manual-test.cpp
src/uci-interface/tests/manual/: main.cpp
src/uci-interface/tests/unit/: enlist_options.cpp  info.cpp  option_creation.cpp
src/uci-interface/uci-interface/: config.cpp  engine_interface.cpp  globals.cpp  option.cpp
